convert fix bug on convert param

--- a/tensorboard/plugins/graph_edit/tf_graph_edit_add_op/tf-graph-edit-add-op.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit_add_op/tf-graph-edit-add-op.html
@@ -7,7 +7,7 @@
 <link rel="import" href="../iron-list/iron-list.html">
 <link rel="import" href="../paper-button/paper-button.html">
 <link rel="import" href="../paper-menu-button/paper-menu-button.html">
-<link rel="import" href="../tf-imports/katex-js.html">
+<!-- <link rel="import" href="../tf-imports/katex-js.html"> -->
 
 
 <dom-module id="tf-graph-edit-add-op">
