fix: fix bugs on convert param

--- a/tensorboard/plugins/convert/tf_convert_controls/tf-convert-controls.html
+++ b/tensorboard/plugins/convert/tf_convert_controls/tf-convert-controls.html
@@ -139,7 +139,7 @@ paper-dropdown-menu {
         <paper-input class="" label="Predict Net" id="predict_net"></paper-input>
         <paper-input class="" label="Init Net" id="init_net"></paper-input>
       </div>
-      <div id="srcisonnxortorch"  style="display: none">
+      <div id="srcisc2ortorch"  style="display: none">
         <paper-input class="" label="Input Size" value="{{inputSize}}"></paper-input>
       </div>
 
