--- a/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
+++ b/tensorboard/plugins/inference/tf_inference_dashboard/tf-inference-dashboard.html
@@ -71,6 +71,13 @@ TensorFlow run.
         </div>
         <div class="flex-holder">
           <paper-input
+            label="Tensor Path"
+            id = "tensorpath"
+            name = "tensorpath"
+          ></papper-input>
+        </div>
+        <div class="flex-holder">
+          <paper-input
             label="Batch Size"
             id = "batchsize"
             name = "batchsize"
@@ -198,7 +205,7 @@ TensorFlow run.
                                 actual-size="[[_actualSize]]"
                                 brightness-adjustment="[[_brightnessAdjustment]]"
                                 contrast-percentage="[[_contrastPercentage]]"
-                                on-tap="_revealInfo"
+                                batch-size = "[[_batchsize]]"
                               ></tf-inference-loader>
                             </template>
                           </div>
@@ -287,7 +294,7 @@ TensorFlow run.
             <div class="data-edit">
               <form is="iron-form" id="form" method="post">
                 <div class="flex-horizontal">
-                  <paper-input label="" id="dataBatch" always-float-label></paper-input>
+                  <paper-input label="Data Point" id="dataBatch" always-float-label></paper-input>
                   <iron-icon icon="icons:remove" class="separator"></iron-icon>
                   <paper-input label="" id="dataX" always-float-label></paper-input>
                   <iron-icon icon="icons:remove" class="separator"></iron-icon>
@@ -479,6 +486,7 @@ TensorFlow run.
       }
       #center {
         position: relative;
+        overflow: hidden;
       }
       #info {
         position: relative;
@@ -621,6 +629,10 @@ TensorFlow run.
     Polymer({
       is: 'tf-inference-dashboard',
       properties: {
+        _batchsize:{
+          type: Number,
+          value: 1024,
+        },
         postDivElement: {
           type: String
         },
@@ -810,38 +822,38 @@ TensorFlow run.
           },100);
         }
       },
-      _revealInfo(e){
-        const img = d3.select(this.$.channelimage);
-        const info = d3.select(this.$.channelinfo);
-        const infoImg = d3.select(this.$.infoImg);
-        const infoDistribution = d3.select(this.$.infoDistribution);
-        const resizer = d3.select(this.$.resizer);
-        const resizerinfo = d3.select(this.$.resizerinfo);
-        const loader = this.$.channelloader
-        if(!this._isRevealed){
-          this._isRevealed = true;
-          img.style('width', 100 + '%');
-          img.style('height', 60 + '%');
-          info.style('width', 100 + '%');
-          info.style('height', 40 + '%');
-          //infoImg.style('height', 30 + '%');
-          //infoDistribution.style('height', 70 + '%');
-          info.style('display', "block");
-          resizer.style('display',"table");
-          resizerinfo.style('display',"table");
-        }
-        const url = tf_backend.getRouter().pluginRoute('inference', '/channelinfo');
-        const datainfo = Promise.resolve(this._requestManager.request(url));
-        const that = this;
-        datainfo.then(function(result) {
-          var data = result['data'];
-          that.set('_data',data);
-          console.log(that._data);
-        });
+      _revealInfo(){
+        // const img = d3.select(this.$.channelimage);
+        // const info = d3.select(this.$.channelinfo);
+        // const infoImg = d3.select(this.$.infoImg);
+        // const infoDistribution = d3.select(this.$.infoDistribution);
+        // const resizer = d3.select(this.$.resizer);
+        // const resizerinfo = d3.select(this.$.resizerinfo);
+        // const loader = this.$.channelloader
+        // if(!this._isRevealed){
+        //   this._isRevealed = true;
+        //   img.style('width', 100 + '%');
+        //   img.style('height', 60 + '%');
+        //   info.style('width', 100 + '%');
+        //   info.style('height', 40 + '%');
+        //   //infoImg.style('height', 30 + '%');
+        //   //infoDistribution.style('height', 70 + '%');
+        //   info.style('display', "block");
+        //   resizer.style('display',"table");
+        //   resizerinfo.style('display',"table");
+        // }
+        // const url = tf_backend.getRouter().pluginRoute('inference', '/channelinfo');
+        // const datainfo = Promise.resolve(this._requestManager.request(url));
+        // const that = this;
+        // datainfo.then(function(result) {
+        //   var data = result['data'];
+        //   that.set('_data',data);
+        //   console.log(that._data);
+        // });
         
-        this.reload();
-        console.log(this._isRevealed);
-        console.log(that.records);
+        // this.reload();
+        // console.log(this._isRevealed);
+        // console.log(that.records);
       },
       _hideInfo(e){
         const img = d3.select(this.$.channelimage);
@@ -961,7 +973,9 @@ TensorFlow run.
       submitForm: function() {
         var modelpath = this.$.modelpath.value;
         var data = this.$.datapath.value;
+        var tensorpath = this.$.tensorpath.value;
         var batch = this.$.batchsize.value;
+        this._batchsize = batch
         var modeltype = this.modelType;
         var tmp = new Array();
         if(this.records==null){
@@ -973,7 +987,7 @@ TensorFlow run.
         console.log(this._modelTypes[this._selectedModel]);
         if(modelpath != "" && data != ""){ // whatever input check                   
           const url = tf_backend.getRouter().pluginRoute('inference', '/distribution');
-          const a = Promise.resolve(this._requestManager.request(url,{'modelpath':modelpath,'datapath':data,'batchsize':batch,'modeltype':modeltype}));
+          const a = Promise.resolve(this._requestManager.request(url,{'modelpath':modelpath,'datapath':data,'tensorpath':tensorpath,'batchsize':batch,'modeltype':modeltype}));
           const that = this;
           a.then(function(result) {
             console.log(result['accuracy']);
@@ -993,6 +1007,7 @@ TensorFlow run.
       submitEdit: function() {
         var modelpath = this.$.modelpath.value;
         var data = this.$.datapath.value;
+        var tensorpath = this.$.tensorpath.value;
         var batch = this.$.batchsize.value;
         var modeltype = this.modelType;
         var editlog = JSON.stringify(this._log);
@@ -1007,7 +1022,7 @@ TensorFlow run.
         //console.log(this._modelTypes[this._selectedModel]);
         if(modelpath != "" && data != ""){ // whatever input check                   
           const url = tf_backend.getRouter().pluginRoute('inference', '/distributionEdit');
-          const a = Promise.resolve(this._requestManager.request(url,{'modelpath':modelpath,'datapath':data,'batchsize':batch,'modeltype':modeltype,'edit':editlog}));
+          const a = Promise.resolve(this._requestManager.request(url,{'modelpath':modelpath,'datapath':data,'tensorpath':tensorpath,'batchsize':batch,'modeltype':modeltype,'edit':editlog}));
           const that = this;
           a.then(function(result) {
             console.log(result['accuracy']);
@@ -1046,7 +1061,7 @@ TensorFlow run.
         var divelement = e.path[2]
         if(this.postDivElement!=undefined){//select others
           if(this.postDivElement != divelement.id){
-document.getElementById(this.postDivElement).getElementsByClassName('checkbox')[0].checked = false;
+            document.getElementById(this.postDivElement).getElementsByClassName('checkbox')[0].checked = false;
             this.postDivElement = divelement.id
           }
           else{//cancel
@@ -1064,7 +1079,8 @@ document.getElementById(this.postDivElement).getElementsByClassName('checkbox')[
           this._hideInfo(e);
         }
         console.log(this._selectedRuns)
-      }
+      },
+
 });
 </script>
 </dom-module>
