--- a/tensorboard/plugins/profile/google_chart/google-chart.html
+++ b/tensorboard/plugins/profile/google_chart/google-chart.html
@@ -16,6 +16,7 @@ limitations under the License.
 -->
 
 <link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../tf-imports/loaderjs.html">
 <link rel="import" href="../iron-ajax/iron-request.html">
 <link rel="import" href="google-chart-loader.html">
 <link rel="import" href="google-chart-styles.html">
