--- a/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit.html
@@ -61,8 +61,26 @@ h2 {
   cursor: row-resize;
 }
 
+.hr1 {
+    background-color: #f57c00;
+    height: 2px;
+    border: none;
+    margin-top: 0px;
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-bottom: 10px;
+  }
 paper-button {
   text-transform: none;
+}
+
+.add-icon {
+  color: #f57c00;
+  margin-left: 10px;
+}
+
+paper-input {
+  --paper-input-container-focus-color: #f57c00;
 }
 </style>
 <div class="container">
@@ -82,8 +100,25 @@ paper-button {
           health-pill-step-index="{{healthPillStepIndex}}"
           handle-edge-selected="[[handleEdgeSelected]]"
     ></tf-graph-edit-scene>
+
     <hr class="hr" id="hr">
-    <tf-graph-edit-jupyter style="background-color: #fff;"></tf-graph-edit-jupyter>
+    <template is="dom-if" if="[[!fileloaded]]">
+      <!-- new / load -->
+      <div style="margin-bottom: 10px;margin-top: 5px;">
+        <iron-icon icon="note-add" class="add-icon" on-click="newNotebook"></iron-icon>
+        <iron-icon icon="open-in-browser" class="add-icon" on-click="loadNotebook"></iron-icon>
+        <input type="value" value="">
+        <!-- <paper-input class="path" label="Source Path" value=""></paper-input> -->
+      </div>
+      <hr class="hr1">
+    </template>
+    <template is="dom-if" if="[[fileloaded]]">
+      <tf-graph-edit-jupyter style="background-color: #fff;"
+        fileloaded="{{fileloaded}}"
+        notebook="[[notebook]]"
+      ></tf-graph-edit-jupyter>
+    </template>
+    
   </div>
 </div>
 </template>
@@ -95,6 +130,13 @@ Polymer({
   is: 'tf-graph-edit',
 
   properties: {
+    notebook: {
+      type: Object,
+    },
+    fileloaded:{
+      type: Boolean,
+      value: false,
+    },
     graphHierarchy: {
       type: Object,
       notify: true,
@@ -515,5 +557,83 @@ Polymer({
   // getGraphHierarchy: function() {
   //   return this.graphHierarchy
   // }
+  loadNotebook: function(){
+    this.notebook = {
+      "cells": [
+        {
+        "cell_type": "code",
+        "execution_count": 1,
+        "metadata": {},
+        "outputs": [],
+        "source": ["a = 3\n","a"]
+        },
+        {
+        "cell_type": "code",
+        "execution_count": null,
+        "metadata": {},
+        "outputs": [],
+        "source": []
+        }
+      ],
+      "metadata": {
+        "kernelspec": {
+        "display_name": "Python 3",
+        "language": "python",
+        "name": "python3"
+        },
+        "language_info": {
+        "codemirror_mode": {
+          "name": "ipython",
+          "version": 3
+        },
+        "file_extension": ".py",
+        "mimetype": "text/x-python",
+        "name": "python",
+        "nbconvert_exporter": "python",
+        "pygments_lexer": "ipython3",
+        "version": "3.7.3-final"
+        }
+      },
+      "nbformat": 4,
+      "nbformat_minor": 2
+      }
+    this.fileloaded = true
+  },
+  newNotebook: function(){
+    this.notebook = {
+      "cells": [
+        {
+        "cell_type": "code",
+        "execution_count": null,
+        "metadata": {},
+        "outputs": [],
+        "source": []
+        }
+      ],
+      "metadata": {
+        "kernelspec": {
+        "display_name": "Python 3",
+        "language": "python",
+        "name": "python3"
+        },
+        "language_info": {
+        "codemirror_mode": {
+          "name": "ipython",
+          "version": 3
+        },
+        "file_extension": ".py",
+        "mimetype": "text/x-python",
+        "name": "python",
+        "nbconvert_exporter": "python",
+        "pygments_lexer": "ipython3",
+        "version": "3.7.3-final"
+        }
+      },
+      "nbformat": 4,
+      "nbformat_minor": 2
+      }
+    
+    this.fileloaded = true
+  },
 });
 </script>
