--- a/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit/tf-graph-edit.html
@@ -102,22 +102,7 @@ paper-input {
     ></tf-graph-edit-scene>
 
     <hr class="hr" id="hr">
-    <template is="dom-if" if="[[!fileloaded]]">
-      <!-- new / load -->
-      <div style="margin-bottom: 10px;margin-top: 5px;">
-        <iron-icon icon="note-add" class="add-icon" on-click="newNotebook"></iron-icon>
-        <iron-icon icon="open-in-browser" class="add-icon" on-click="loadNotebook"></iron-icon>
-        <input type="value" value="">
-        <!-- <paper-input class="path" label="Source Path" value=""></paper-input> -->
-      </div>
-      <hr class="hr1">
-    </template>
-    <template is="dom-if" if="[[fileloaded]]">
-      <tf-graph-edit-jupyter style="background-color: #fff;"
-        fileloaded="{{fileloaded}}"
-        notebook="[[notebook]]"
-      ></tf-graph-edit-jupyter>
-    </template>
+    <tf-graph-edit-jupyter style="background-color: #fff;"></tf-graph-edit-jupyter>
     
   </div>
 </div>
@@ -132,10 +117,6 @@ Polymer({
   properties: {
     notebook: {
       type: Object,
-    },
-    fileloaded:{
-      type: Boolean,
-      value: false,
     },
     graphHierarchy: {
       type: Object,
@@ -557,83 +538,5 @@ Polymer({
   // getGraphHierarchy: function() {
   //   return this.graphHierarchy
   // }
-  loadNotebook: function(){
-    this.notebook = {
-      "cells": [
-        {
-        "cell_type": "code",
-        "execution_count": 1,
-        "metadata": {},
-        "outputs": [],
-        "source": ["a = 3\n","a"]
-        },
-        {
-        "cell_type": "code",
-        "execution_count": null,
-        "metadata": {},
-        "outputs": [],
-        "source": []
-        }
-      ],
-      "metadata": {
-        "kernelspec": {
-        "display_name": "Python 3",
-        "language": "python",
-        "name": "python3"
-        },
-        "language_info": {
-        "codemirror_mode": {
-          "name": "ipython",
-          "version": 3
-        },
-        "file_extension": ".py",
-        "mimetype": "text/x-python",
-        "name": "python",
-        "nbconvert_exporter": "python",
-        "pygments_lexer": "ipython3",
-        "version": "3.7.3-final"
-        }
-      },
-      "nbformat": 4,
-      "nbformat_minor": 2
-      }
-    this.fileloaded = true
-  },
-  newNotebook: function(){
-    this.notebook = {
-      "cells": [
-        {
-        "cell_type": "code",
-        "execution_count": null,
-        "metadata": {},
-        "outputs": [],
-        "source": []
-        }
-      ],
-      "metadata": {
-        "kernelspec": {
-        "display_name": "Python 3",
-        "language": "python",
-        "name": "python3"
-        },
-        "language_info": {
-        "codemirror_mode": {
-          "name": "ipython",
-          "version": 3
-        },
-        "file_extension": ".py",
-        "mimetype": "text/x-python",
-        "name": "python",
-        "nbconvert_exporter": "python",
-        "pygments_lexer": "ipython3",
-        "version": "3.7.3-final"
-        }
-      },
-      "nbformat": 4,
-      "nbformat_minor": 2
-      }
-    
-    this.fileloaded = true
-  },
 });
 </script>
