--- a/tensorboard/plugins/graph_edit/tf_graph_edit_jupyter/tf-graph-edit-jupyter.html
+++ b/tensorboard/plugins/graph_edit/tf_graph_edit_jupyter/tf-graph-edit-jupyter.html
@@ -151,8 +151,24 @@
     border: 0.5px solid #cfcfcf;
   }
 
+  .load-icon {
+    color: #f57c00;
+    margin-left: 10px;
+  }
 </style>
 
+<div id="load-section">
+  <!-- new / load -->
+  <div style="margin-bottom: 10px;margin-top: 5px;">
+    <iron-icon icon="note-add" class="load-icon" on-click="newNotebook"></iron-icon>
+    <iron-icon icon="open-in-browser" class="load-icon" on-click="loadNotebook"></iron-icon>
+    <input type="value" value="">
+  </div>
+  <hr class="hr1">
+</div>
+<template is="dom-if" if="[[fileloaded]]">
+  
+<!--  -->
 
 <div>
   <iron-icon icon="arrow-back" class="back-icon op-icon" on-click="backToLoadePage"></iron-icon>
@@ -177,6 +193,9 @@
     </div>
   </template>
 </div>
+
+</template>
+
 </template>
 </dom-module>
 <script>
@@ -191,7 +210,6 @@ Polymer({
     globalcellid: Number,
     fileloaded:{
       type: Boolean,
-      notify: true,
     },
     cells: {
       type: Array,
@@ -228,6 +246,86 @@ Polymer({
     //   });
     
   },
+  loadNotebook: function(){
+    this.notebook = {
+      "cells": [
+        {
+        "cell_type": "code",
+        "execution_count": 1,
+        "metadata": {},
+        "outputs": [],
+        "source": ["a = 3\n","a"]
+        },
+        {
+        "cell_type": "code",
+        "execution_count": null,
+        "metadata": {},
+        "outputs": [],
+        "source": []
+        }
+      ],
+      "metadata": {
+        "kernelspec": {
+        "display_name": "Python 3",
+        "language": "python",
+        "name": "python3"
+        },
+        "language_info": {
+        "codemirror_mode": {
+          "name": "ipython",
+          "version": 3
+        },
+        "file_extension": ".py",
+        "mimetype": "text/x-python",
+        "name": "python",
+        "nbconvert_exporter": "python",
+        "pygments_lexer": "ipython3",
+        "version": "3.7.3-final"
+        }
+      },
+      "nbformat": 4,
+      "nbformat_minor": 2
+      }
+    this.fileloaded = true
+    document.getElementById('load-section').style.display = 'none'
+  },
+  newNotebook: function(){
+    this.notebook = {
+      "cells": [
+        {
+        "cell_type": "code",
+        "execution_count": null,
+        "metadata": {},
+        "outputs": [],
+        "source": []
+        }
+      ],
+      "metadata": {
+        "kernelspec": {
+        "display_name": "Python 3",
+        "language": "python",
+        "name": "python3"
+        },
+        "language_info": {
+        "codemirror_mode": {
+          "name": "ipython",
+          "version": 3
+        },
+        "file_extension": ".py",
+        "mimetype": "text/x-python",
+        "name": "python",
+        "nbconvert_exporter": "python",
+        "pygments_lexer": "ipython3",
+        "version": "3.7.3-final"
+        }
+      },
+      "nbformat": 4,
+      "nbformat_minor": 2
+      }
+    
+    this.fileloaded = true
+    document.getElementById('load-section').style.display = 'none'
+  },
   // parse notebook json
   initNotebook: function() {
     var c = []
@@ -254,12 +352,8 @@ Polymer({
   },
   backToLoadePage: function () {
     this.fileloaded = false
+    document.getElementById('load-section').style.display = ''
   },
-  // updateNotebook: function(){
-  //   if(this.notebook!=undefined){
-  //     this.notebook["cells"] = this.cells 
-  //   }
-  // }
   selectCell: function (e) {
     var divelement = e.path[0]
     // console.info(typeof(e.path[0]))
